--- a/Cube.Secure/Views/MainWindow.xaml
+++ b/Cube.Secure/Views/MainWindow.xaml
@@ -75,7 +75,7 @@
 
             <TabItem Margin="1">
                 <TabItem.Header>
-                    <TextBlock Margin="5">Second</TextBlock>
+                    <TextBlock Margin="5">RSA</TextBlock>
                 </TabItem.Header>
                 <Grid Margin="10">
                     <TextBlock>Second Tab</TextBlock>
