--- a/Cube.Secure/Views/PasswordWindow.xaml
+++ b/Cube.Secure/Views/PasswordWindow.xaml
@@ -8,23 +8,25 @@
         xmlns:viewModel="clr-namespace:Cube.Secure.ViewModel"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Password" Height="200" Width="400">
+        Title="Password" Height="150" Width="400">
     <mah:MetroWindow.Resources>
         <viewModel:PasswordViewModel x:Key="PasswordViewModel" />
     </mah:MetroWindow.Resources>
+    <mah:MetroWindow.DataContext>
+        <viewModel:PasswordViewModel/>
+    </mah:MetroWindow.DataContext>
     <Grid Margin="30 0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="0.5*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBox  Grid.Row="1" Grid.Column="0" Text="{Binding Path=Password}"></TextBox>
-        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">Encrypt</Button>
+        <TextBox  Grid.Row="1" Grid.Column="0" Text="{Binding Path=Password}" VerticalAlignment="Center"></TextBox>
+        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Command="{Binding Path=WindowCloseCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}">Run</Button>
     </Grid>
 </mah:MetroWindow>
 
